# shapeshifter-specification

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  USEF Flex Trading Protocol Specifications 1.01.docx  USEF Flex Trading Protocol Specifications 3.0.0.docx  USEF Flex Trading Protocol Specifications.docx  mkdocs.yml  pdf_event_hook.py  poetry.lock.license  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: docs-development.yml  docs-latest.yaml  docs-latest.yml  docs-pr.yml  docs-release.yml  publish.yml
V2.00/: UFTP-V2.00-agr-dso.xsd  UFTP-V2.00-agr.xsd  UFTP-V2.00-cro-dso.xsd  UFTP-V2.00-cro.xsd  UFTP-V2.00-dso.xsd  UFTP-V2.00-metering.xsd
V3.0/: UFTP-V3.0-agr-cro.xsd  UFTP-V3.0-agr-dso.xsd  UFTP-V3.0-agr.xsd  UFTP-V3.0-cro-dso.xsd  UFTP-V3.0-cro.xsd  UFTP-V3.0-dso.xsd  UFTP-V3.0-metering.xsd
development/: 404.html  index.html  sitemap.xml
development/diagrams/: contract-phase.puml  settle-phase.puml  use-case-3-10-exchange-of-flexorder-direct.puml  validate-phase.puml
development/general-description/: index.html
development/search/: search_index.json
diagrams/: example-dso-only-implementation-using-oauth-components.drawio  example-dso-only-implementation-using-oauth-sequence.drawio  example-full-implementation-using-oauth-components.drawio  example-full-implementation-using-oauth-sequence.drawio
docs/: disclaimer.md  index.md  missing.md  usef-flex-trading-protocol.md
docs/about/: levels-of-compliancy.md  purpose.md  reading-guideline.md  scope.md
docs/appendix/: bibliography.md  flex-reservation-mechanism.md  glossary.md  message-transport-mechanism.md  optional-security-measures.md  (+1 more)
latest/: 404.html  index.html  sitemap.xml
overrides/: main.html
xsd/: UFTP-V2.00-agr-cro.xsd  UFTP-agr-cro.xsd  UFTP-agr-dso.xsd  UFTP-agr.xsd  UFTP-common.xsd  UFTP-cro-dso.xsd  UFTP-cro.xsd  UFTP-dso.xsd  UFTP-metering.xsd
(+216 files in other folders)
