[tool.poetry]
name = "shapeshifter-specification"
version = "0.1.0"
description = ""
authors = ["\"Shapeshifter contributors\""]
license = "\"Apache-2.0\""
readme = "README.md"
packages = [{include = "shapeshifter_specification"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.0.11"
mike = "^1.1.2"
mkdocs-pdf-generate = {git = "https://github.com/iSOLveIT/mkdocs-pdf-generate/"}
mkdocs-glightbox = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
