# SPDX-FileCopyrightText: 2020-2023 Contributors to the Shapeshifter project
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "shapeshifter-specification"
version = "0.1.0"
description = ""
authors = ["\"Shapeshifter contributors\""]
license = "\"Apache-2.0\""
readme = "README.md"
package-mode = false
packages = [{include = "shapeshifter_specification"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.6.10"
mike = "^1.1.2"
mkdocs-glightbox = "^0.4.0"
mkdocs-with-pdf = "^0.9.3"
setuptools = "^70.3.0"
weasyprint = "^65.0"
plantuml = "^0.3.0"
mkdocs-plantuml = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
